# wavutil

./: .gitignore  README  wavutil.cabal
src/: WAV.hs  WAVInfo.hs
src/WAV/: Parser.hs
test/: Main.hs
test/WAV/Parser/: Test.hs
